# web_push_rust_example

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
static/: app.webmanifest  index.html  index.js  worker.js
