[package]
name = "web_push_rust_example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web-push = "0.10"
